# compare-fonts

./: ChangeLog.md  README.md  cabal.project  compare-fonts.cabal  stack-lts20.yaml  stack.yaml
src/: Fonts.hs  InitialFont.hs  Main.hs
