name:                compare-fonts
version:             0.1.0
synopsis:            One line summary
description:
        Short paragraph here
license:             GPL-3
license-file:        COPYING
author:              Jens Petersen <juhpetersen@gmail.com>
maintainer:          Jens Petersen <juhpetersen@gmail.com>
copyright:           2022  Jens Petersen <juhpetersen@gmail.com>
category:            Unclassified
homepage:            https://github.com/juhp/compare-fonts
bug-reports:         https://github.com/juhp/compare-fonts/issues
build-type:          Simple
--  extra-doc-files:     README.md
--                       ChangeLog.md
cabal-version:       2.0
-- tested-with:         GHC == 8.6.5
--                       || == 8.8.4
--                       || == 8.10.7
--                       || == 9.0.2

source-repository head
  type:                git
  location:            https://github.com/juhp/compare-fonts.git

executable compare-fonts
  main-is:             Main.hs
--  other-modules:       Paths_compare_fonts
  hs-source-dirs:      src
  build-depends:       base < 5,
                       gi-gtk < 4,
                       gi-gtk-declarative,
                       gi-gtk-declarative-app-simple,
                       text

  default-language:    Haskell2010
  ghc-options:         -Wall -threaded
  if impl(ghc >= 8.0)
    ghc-options:       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.10)
    ghc-options:       -Wunused-packages
