name:                compare-fonts
version:             0.1.0
synopsis:            GTK tool to compare 2 fonts
description:
        Compare two fonts next to each other on some sample text.
license:             GPL-3
license-file:        COPYING
author:              Jens Petersen <juhpetersen@gmail.com>
maintainer:          Jens Petersen <juhpetersen@gmail.com>
copyright:           2022  Jens Petersen <juhpetersen@gmail.com>
category:            Utility
homepage:            https://github.com/juhp/compare-fonts
bug-reports:         https://github.com/juhp/compare-fonts/issues
build-type:          Simple
extra-doc-files:     README.md
                     ChangeLog.md
cabal-version:       2.0
tested-with:         GHC == 9.4.8
                     || == 9.6.6
                     || == 9.8.3

source-repository head
  type:                git
  location:            https://github.com/juhp/compare-fonts.git

executable compare-fonts
  main-is:             Main.hs
  other-modules:       Fonts
                       InitialFont
                       Paths_compare_fonts
  hs-source-dirs:      src
  build-depends:       base < 5,
                       extra,
                       gi-gtk < 4,
                       gi-gtk-declarative,
                       gi-gtk-declarative-app-simple,
                       gi-pango,
                       safe,
                       simple-cmd,
                       simple-cmd-args,
                       simple-prompt >= 0.2,
                       text,
                       vector

  default-language:    Haskell2010
  ghc-options:         -Wall -threaded
  if impl(ghc >= 8.0)
    ghc-options:       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.10)
    ghc-options:       -Wunused-packages
